was able to generate dates

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= time1 = Time.new %>
+
+<% time1 = Time.now %>
+<% time1 = time1 + 2*60*60 %>
+<%=  time1.strftime("%a, %b %e, %-I%P") %>
+<%# t = Time.now %>
