--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Our custom components
+@import "all_last_minute_date_components/index";
