--- a/app/assets/stylesheets/all_last_minute_date_components/_index.scss
+++ b/app/assets/stylesheets/all_last_minute_date_components/_index.scss
@@ -1,8 +1,15 @@
-@import "button";
 
+
+
+// Imports
+@import "button";
+@import "search_box";
+
+// Component centered on page
 .wrapper {
   width: 70vw;
-  height: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   border: 1px solid red;
+  background-color: antiquewhite;
 }
