--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -1,18 +1,28 @@
 
 <div class="wrapper">
 
+<br>
 
 <%# Butttons  %>
-<%= link_to "Book now", "#", class: "btn btn-flat" %>
+<div>
+  <%= link_to "Concert", "#", class: "btn btn-flat" %>
+</div>
 
 
+<br>
 
-
-
-
-
-
-
+<%= simple_form_for :search, url: root_path, method: :get do |f| %>
+  <div class="search-form-control form-group"
+  data-controller="search"
+  data-action="input->search#hideMagnifier"
+  >
+    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+    <i class="fas fa-search absolute-magnifier" data-list-target="item"></i>
+    <button name="button" type="submit" class="btn btn-flat">
+      Search
+    </button>
+  </div>
+<% end %>
 
 
 
