--- a/app/views/tickets/my_tickets.html.erb
+++ b/app/views/tickets/my_tickets.html.erb
@@ -1,6 +1,11 @@
 <h2>Upcoming shows</h2>
 
 <h2>Past shows</h2>
-<% @tickets.each do |ticket| %>
-  <p><%= ticket.event_id %></p>
+
+<% @my_events.each do |event| %>
+  <div>
+    <p><%= event.date %></p>
+    <p><%= event.title %></p>
+    <p><%= event.artist %></p>
+  </div>
 <% end %>
