--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,13 @@
 <%= image_tag @my_profile.picture_url %>
 <%# <%= link_to 'Modify your profile' %>
-<%= @my_profile.picture_url %>
 <h2>About me</h2>
 <%= @my_profile.description %>
 <h2>My interests</h2>
 <%= @my_profile.tags %>
 <h2>My favourite shows</h2>
-<%= @my_profile.events %>
+<%= raise %>
+<%= @my_events.each do |event| %>
+  <div>
+    <p><%= event.date %></p>
+  </div>
+<% end %>
