added domain url to production

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,9 @@
 <h2>My interests</h2>
 <%= @my_profile.tags %>
 <h2>My favourite shows</h2>
-<%= raise %>
-<%= @my_events.each do |event| %>
+<%# <%= raise %>
+<%# <%= @my_events.each do |event| %>
   <div>
-    <p><%= event.date %></p>
+  <%# <p><%= event.date</p>  %>
   </div>
-<% end %>
+<%# <% end %>
