--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,9 +5,27 @@
   </div>
 
   <div class="p-home">
-  <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
+    <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
   <p>Search Bar</p>
+  <p>map</p>
+
+  <div class="event-banner">
+
+    <div class="event-banner-regroup">
+      <div class="event-banner-text">
+        <h2>MACBETH </h2>
+        <p>Sat, Nov 26, 8pm <br>
+            MTELUS</p>
+        <div class="event-banner-btn">
+          <a class="btn-more-info" href="#">Get more informations</a>
+        </div>
+      </div>
+
+      <div class="event-banner-image">
+        <%= image_tag ("standup.jpeg") %>
+      </div>
+  </div>
 
 </div>
