--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,21 +11,5 @@
   <p>Search Bar</p>
   <p>map</p>
 
-  <div class="event-banner">
-
-    <div class="event-banner-regroup">
-      <div class="event-banner-text">
-        <h2>MACBETH </h2>
-        <p>Sat, Nov 26, 8pm <br>
-            MTELUS</p>
-        <div class="event-banner-btn">
-          <a class="btn-more-info" href="#">Get more informations</a>
-        </div>
-      </div>
-
-      <div class="event-banner-image">
-        <%= image_tag ("standup.jpeg") %>
-      </div>
-  </div>
-
+  <%= render "shared/eventbanner" %>
 </div>
