--- a/app/views/shared/_eventbanner.html.erb
+++ b/app/views/shared/_eventbanner.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="event-banner-image">
-    <%= image_tag ("standup.jpeg") %>
+    <%= image_tag ("standup.jpg") %>
   </div>
 
 </div>
