--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,13 @@
   </div>
 
   <p>Search Bar</p>
-  <p>map</p>
+
+  <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API'] %>">
+  </div>
 
   <%= render "shared/eventbanner" %>
+
 </div>
