--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,12 +10,7 @@
 
   <p>Search Bar</p>
 
-  <div style="width: 100%; height: 600px;"
-    data-controller="map"
-    data-map-markers-value="<%= @markers.to_json %>"
-    data-map-api-key-value="<%= ENV['MAPBOX_API'] %>">
-  </div>
-
+  <%= render "shared/map" %>
   <%= render "shared/eventbanner" %>
 
 </div>
