--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -36,7 +36,7 @@
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    magin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .event-banner-image {
