--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,28 @@
-<div class="event-banner">
-  <%= image_tag @my_profile.picture_url, class: 'avatar-large' %>
-  <%# <%= link_to 'Modify your profile', edit_ %>
-</div>
-<h2>About me</h2>
-<%= @my_profile.description %>
-<h2>My interests</h2>
-<%= @my_profile.tags %>
-<h2>My favourite shows</h2>
-<%# <%= raise %>
-<%# <%= @my_events.each do |event| %>
-  <div>
-  <%# <p><%= event.date</p>  %>
+<div class="text-center">
+  <div class="d-flex justify-content-center align-items-center event-banner ">
+    <%= image_tag @my_profile.picture_url, class: 'profile-picture' %>
+    <%# <%= link_to 'Modify your profile', edit_ %>
   </div>
-<%# <% end %>
+
+  <div class="profile-banner">
+    <h2>About me</h2>
+    <p><%= @my_profile.description %></p>
+  </div>
+
+  <div class="profile-card">
+    <h2>My interests</h2>
+    <% @my_profile.tags.each do |tag| %>
+      <p><%= tag %></p>
+    <% end %>
+  </div>
+
+  <div class="profile-card">
+    <h2>My favourite shows</h2>
+    <%# <%= raise %>
+    <%# <%= @my_events.each do |event| %>
+      <div>
+      <%# <p><%= event.date</p>  %>
+      </div>
+    <%# <% end %>
+  </div>
+</div>
