--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,20 @@
 
   <p>Search Bar</p>
 
+  <div class="home-btn-category">
+    <div class="home-btn-category btn">
+      <a class="category-link" href="#">Music</a>
+    </div>
+
+    <div class="home-btn-category btn">
+      <a class="category-link" href="#">Art & Theater</a>
+    </div>
+
+    <div class="home-btn-category btn">
+      <a class="category-link" href="#">Sport</a>
+    </div>
+  </div>
+
   <%= render "shared/map" %>
   <%= render "shared/eventbanner" %>
 
