trying to display user's events

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -2,13 +2,28 @@
   width: 80px;
   border-radius: 50%;
 }
-.profile-background {
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-}
 .profile-banner {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  color: white;
+  p {
+    margin: 0;
+  }
 }
-.profile-card h2 {
-    color: black
+.profile-black-card {
+  background-color: black;
+  color: white;
+  p {
+    margin: 0;
+  }
+}
+.profile-white-card {
+  background-color: white;
+  color: black;
+  p {
+    margin: 0;
+  }
 }
