updating, issue with routing

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,11 +12,9 @@
         <li class="nav-item"><a class="nav-link" href="#">Find an event</a></li>
         <li class="nav-item"><a class="nav-link" href="#">My Tickets</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="#">Discussions</a></li>
+        <li class="nav-item"><a class="nav-link" href="/conversations/show">Discussions</a></li>
 
-        <%= link_to conversation_path, class: "nav-link" do %>
-          <li class="nav-item">Discussions</li>
-        <% end %>
+
 
         <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
         <!--li class="nav-item"-->
