--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -1,4 +1,16 @@
+<div class="event-banner">
 
+  <div class="event-banner-regroup">
+    <div class="event-banner-text">
+      <h2><%= event.title %></h2>
+      <p><%= event.address %><br>
+      <%= event.category %></p>
+      <div class="event-banner-btn">
+        <a class="btn-more-info" href="#">Get more informations</a>
+      </div>
+  </div>
 
-# h2><%= event.title %></h2>
-# <p><%= event.address %></p>
+    <div class="event-banner-image">
+      <%= image_tag ("standup.jpeg") %>
+    </div>
+</div>
