--- a/app/views/tickets/my_tickets.html.erb
+++ b/app/views/tickets/my_tickets.html.erb
@@ -2,10 +2,10 @@
 
 <h2>Past shows</h2>
 
-<% @my_events.each do |event| %>
+<%# <% @my_events.each do |event| %>
   <div>
-    <p><%= event.date %></p>
-    <p><%= event.title %></p>
-    <p><%= event.artist %></p>
+    <%# <p><%= event.date %></p>
+    <%# <p><%= event.title %></p>
+    <%# <p><%= event.artist %></p>
   </div>
-<% end %>
+<%# <% end %>
