fixed the routing bug, now creating custom routes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
         <li class="nav-item"><a class="nav-link" href="#">Find an event</a></li>
         <li class="nav-item"><a class="nav-link" href="#">My Tickets</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="/conversations/show">Discussions</a></li>
+        <li class="nav-item"><a class="nav-link" href="/conversations/1">Discussions</a></li>
 
 
 
