--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -41,7 +41,10 @@
 
 .event-banner-image {
   display: flex;
-  height: 125px;
+  height: 148px;
+  text-align: center;
+  margin-left: 20px;
+  margin-top: 5px;
 }
 
 .event-banner-regroup {
