fixing the map popup position and style

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,4 +24,13 @@
   color: rgba(0, 0, 0, 0.837);
   text-align: center;
   font-family: 'Manrope', sans-serif;
+  padding: 20px;
+}
+
+.me-auto {
+  margin-top: 10px;
+}
+
+.container-fluid {
+  margin-bottom: 10px;
 }
