--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto">
         <li class="nav-item active"><a class="nav-link" href="#">Profile</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Find an event</a></li>
+        <li class="nav-item"><%= link_to "Find an event", root_path, class:"nav-link" %></li>
         <li class="nav-item"><a class="nav-link" href="#">My Tickets</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Discussions</a></li>
         <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
