working on show pages

--- a/app/assets/stylesheets/components/_peoplebtn.scss
+++ b/app/assets/stylesheets/components/_peoplebtn.scss
@@ -1,4 +1,4 @@
-.buy-btn {
+.people-btn {
   background-color: white;
   height: 40px;
   display: flex;
@@ -7,7 +7,12 @@
   margin: 35px;
   width: 112px;
   border-radius: 5px;
+  border: 1px black solid;
+}
+
+.people-btn a {
   color: black;
   font-family: 'Manrope', sans-serif;
   font-size: 13px;
+  text-decoration: none;
 }
