--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,7 +19,14 @@
 
     <h2>Description</h2>
   </div>
+
+  <div class="event-people-btn">
+    <div class="people-btn">
+      <a class="nav-link-people" href="#"> See who's going</a>
+    </div>
+  </div>
 </div>
+
 
 <div class="event-banner-price">
   <div class="event-price">
