--- a/app/assets/stylesheets/pages/_showevents.scss
+++ b/app/assets/stylesheets/pages/_showevents.scss
@@ -54,3 +54,9 @@
 .events-picture img {
   width: 100%;
 }
+
+.event-people-btn {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
