--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,13 +1,17 @@
 .profile-picture {
   width: 150px;
   border-radius: 50%;
+  margin: 30px 0;
 }
 .profile-banner {
   width: 100%;
   background-size: cover;
   background-position: center;
-  padding: 50px 0;
+  padding: 30px 0;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   p {
     margin: 0;
   }
@@ -92,5 +96,14 @@
   color: white;
   background-color: #84C4BB;
   border-radius: 5px;
+  width: fit-content;
+}
+
+.btn-flat {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: white;
+  transition: background 0.3s ease;
   width: fit-content;
 }
