--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <ul class="navbar-nav me-auto">
         <li class="nav-item active"><%= link_to "Profile", my_profile_path, class:"nav-link" %></li>
         <li class="nav-item"><%= link_to "Find an event", root_path, class:"nav-link" %></li>
-        <li class="nav-item"><a class="nav-link" href="#">My Tickets</a></li>
+        <li class="nav-item"><%= link_to "My tickets", my_tickets_path, class:"nav-link" %></li>
         <li class="nav-item"><a class="nav-link" href="#">Discussions</a></li>
         <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
         <!--li class="nav-item"-->
