--- a/app/views/tickets/my_tickets.html.erb
+++ b/app/views/tickets/my_tickets.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="shows text-center mb-3" style="background-color: black">
-  <h2>Your last shows</h2>
+  <h2 style="color:white">Your last shows</h2>
   <% @my_tickets.each do |event| %>
   <% if event.date.before? Date.today %>
   <div class="ticket">
