working buy tivcket methods

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,7 +33,7 @@
     <p><%= @event.price %>$</p>
   </div>
 
-  <div class="buy-btn"
-    <a class="nav-link-buy" href="#"> Buy a ticket</a>
+  <div class="buy-btn">
+    <%= link_to "Buy a ticket", buy_ticket_path(@event), class:"nav-link-buy" %>
   </div>
 </div>
