--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -11,6 +11,6 @@
   </div>
 
     <div class="event-banner-image">
-      <%= image_tag ("standup.jpg") %>
+      <%= image_tag event.picture_url %>
     </div>
 </div>
