was able to style the chatroom

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "eventbanner";
 @import "profile";
 @import "map";
+@import "message";
 @import "homebtn";
 @import "tickets";
 @import "buybtn";
