--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,6 +1,8 @@
 .message-row {
   margin-bottom: 10px;
   padding: 8px;
+  font-family: $manrope;
+  font-size: 1.1rem;
 }
 
 // To style the message itself
