--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -65,10 +65,12 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  font-family: $headers-font;
 }
 .ticket-card h3 {
   font-size: 14px;
   font-weight: bold;
+  font-family: $headers-font;
   margin: 0;
 }
 .ticket-card p {
@@ -77,6 +79,7 @@
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  font-family: $body-font;
 }
 .ticket-card .ticket-card-infos {
   padding: 16px;
@@ -86,10 +89,12 @@
   padding: 20px;
 }
 .grid {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   justify-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .tag {
   padding: 10px;
@@ -102,8 +107,60 @@
 .btn-flat {
   color: white;
   padding: 8px 24px;
-  border-radius: 4px;
+  border-radius: 5px;
   background: white;
   transition: background 0.3s ease;
   width: fit-content;
+}
+.open-form {
+  cursor: pointer;
+  color: white;
+  transition: .3s;
+}
+.form-popup {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, .5);
+  transition: .5s;
+  text-align: center;
+}
+.form-popup .form-wrapper {
+  top: 2em;
+  max-width: 700px;
+  background: white;
+  border-radius: 5px;
+  padding: 50px;
+  padding-top: 50px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+.send-form {
+  cursor: pointer;
+  padding: 10px 30px;
+  background-color: #84C4BB;
+  border: 2px solid #84C4BB;
+  color: #ffffff;
+  font-size: 18px;
+  text-transform: uppercase;
+  transition: .3s;
+}
+.close-form {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 9;
+  cursor: pointer;
+  padding: 10px 30px;
+  background-color: #84C4BB;
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  transition: .3s;
 }
