--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -1,6 +1,6 @@
 <div class="text-center">
   <div class="profile-banner"
-       style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 0, 0, 0, 0.5)), url(https://avatars.githubusercontent.com/u/104274353?v=4);">
+       style="background-image: linear-gradient(rgba( 0, 0, 0, 0.5), rgba( 0, 0, 0, 0.5)), url(<%= image_path @my_profile.picture_url %>);">
     <%= image_tag @my_profile.picture_url, class: 'profile-picture' %>
     <%= link_to 'Modify your profile', edit_my_profile_path, class: "btn btn-flat" %>
   </div>
