formated show dates in profile

--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -31,7 +31,7 @@
         <% if event.title != event.artist %>
           <p><%= event.artist %></p>
         <% end %>
-        <p><%= event.date %></p>
+        <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
       </div>
     </div>
     <% end %>
