--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -28,7 +28,7 @@
         <% if event.title != event.artist %>
           <p><%= event.artist %></p>
         <% end %>
-        <p><%= event.date %></p>
+        <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
       </div>
     </div>
     <% end %>
