--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -112,55 +112,25 @@
   transition: background 0.3s ease;
   width: fit-content;
 }
-.open-form {
-  cursor: pointer;
-  color: white;
-  transition: .3s;
-}
-.form-popup {
-  width: 100%;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  background-color: rgba(0, 0, 0, .5);
-  transition: .5s;
-  text-align: center;
-}
-.form-popup .form-wrapper {
-  top: 2em;
-  max-width: 700px;
-  background: white;
-  border-radius: 5px;
-  padding: 50px;
-  padding-top: 50px;
+.close {
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
 }
-.send-form {
-  cursor: pointer;
-  padding: 10px 30px;
-  background-color: #84C4BB;
-  border: 2px solid #84C4BB;
-  color: #ffffff;
-  font-size: 18px;
-  text-transform: uppercase;
-  transition: .3s;
-}
-.close-form {
+.close:before, .close:after {
   position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 9;
-  cursor: pointer;
-  padding: 10px 30px;
-  background-color: #84C4BB;
-  color: white;
-  font-size: 18px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  transition: .3s;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
 }
