--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,8 +10,25 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :username,
+                required: false,
+                input_html: { autocomplete: "new-username" } %>
+    <%= f.input :age,
+                required: false,
+                input_html: { autocomplete: "new-age" } %>
+    <%= f.input :description,
+                required: false,
+                input_html: { autocomplete: "new-description" } %>
+    <%= f.input :tags,
+                collection: ['Baseball', 'Basketball', 'Boxing', 'Cycling', 'eSports',
+                             'Football', 'Gymnastics', 'Hockey', 'Martial', 'Arts', 'Soccer',
+                             'Tennis', 'Volleyball', 'Pop', 'Alternative', 'Ballads/Romantic', 'Blues', 'Chanson',
+                             'Francaise', 'Classical', 'Country', 'Dance/Electronic', 'Folk',
+                             'Hip-Hop/Rap', 'Jazz', 'Latin', 'Metal', 'R&B', 'Reggae', 'Religious', 'Rock', 'Comedy',
+                             'Cultural', 'Dance', 'Fashion', 'Magic', 'Music', 'Opera', 'Puppetry', 'Theatre'], as: :check_boxes, input_html: { multiple: true },
+                required: false,
+                input_html: { autocomplete: "new-interests" } %>
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
