all user fields can be updated

--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -14,9 +14,11 @@
     <h2>My interests</h2>
     <div class="grid">
       <% @my_profile.tags.each do |tag| %>
+        <% unless tag.empty? %>
         <div class="tag">
           <p><%= tag %></p>
         </div>
+        <% end %>
       <% end %>
     </div>
   </div>
