--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -7,24 +7,46 @@
   justify-content: space-between;
   flex-grow: 1;
 
-  h1 {
-    border-bottom: 1px solid $gray-200;
+  & h1 {
+    // border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
-    padding: 1rem;
+    // padding: 1rem;
   }
 
   .messages {
-    height: 100%;
+    // height: 100%;
     overflow: scroll;
     padding: 1rem;
+    background-color: white;
   }
 
   #new_message {
     border-top: 1px solid $gray-200;
     padding: 1rem;
+    background-color: white;
+    position: sticky;
+    bottom: 0;
+
 
     .form-group {
       margin-bottom: 0;
     }
   }
+}
+
+.textarea.form-control {
+  min-height: calc(1.5em + 0.75rem + 2px);
+  background-color: whitesmoke;
+}
+
+
+.description-card-new{
+  padding: 25px;
+  background-color: black;
+  color: white;
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
