--- a/app/assets/stylesheets/pages/_discussions_page.scss
+++ b/app/assets/stylesheets/pages/_discussions_page.scss
@@ -1,7 +1,7 @@
 .shows-block-new {
   background-color: white;
   padding: 20px;
-  min-height: 600px;
+  min-height: 100vh;
 }
 
 .ticket-card-new {
