added the back button and styled the discussion

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -50,3 +50,19 @@
   justify-content: center;
   align-items: center;
 }
+
+.back_conversation_show{
+  position: absolute;
+  top: 26px;
+  left: 25px;
+  font-size: 25px;
+  transition: all ease-in-out .2s;
+  color: white;
+  & a:link, & a:visited {
+    color: white;
+  }
+  &:hover, &:active {
+    color: white;
+    transform: scale(1.01);
+  }
+}
