--- a/app/assets/stylesheets/components/_eventbanner.scss
+++ b/app/assets/stylesheets/components/_eventbanner.scss
@@ -1,6 +1,7 @@
 .event-banner {
   background-color: black;
   display: flex;
+  text-align: left;
 }
 
 .event-banner-text p {
@@ -14,7 +15,7 @@
   color: white;
   font-family: 'Manrope', sans-serif;
   padding-top: 10px;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .event-banner-text {
@@ -53,4 +54,5 @@
   justify-content: space-between;
   margin: 0 auto;
   padding: 20px;
+  margin: 0 auto;
 }
