--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,16 @@
     <p>No more saturday night <strong>alone</strong>. With last minute date, <strong>choose</strong> a show and <strong>find a buddy</strong> to go with you. </p>
   </div>
 
-  <p>Search Bar</p>
+  <div class="search">
+    <%= form_with url: event_path, method: :get, class: "d-flex my-3" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Pick a city"
+      %>
+      <%= submit_tag "Search", class: "btn my-2 my-sm-0 btn btn-primary" %>
+    <% end %>
+  </div>
 
   <div class="home-btn-category">
     <div class="home-btn-category btn">
