uploading the navbar

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -69,7 +69,7 @@
             data-buy-tickets-target="buyButton">
       Buy a ticket
     </button>
-    <button data-action="click->buy-tickets#showTickets"
+    <button data-action="click->buy-tickets#buyTickets"
             type="button"
             class="buy-btn green"
             data-buy-tickets-target="showButton">
