--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,8 @@
     <p><%= @user.description %></p>
   </div>
 
+  <% byebug %>
+
   <div class="interest-card">
     <div class="people-btn">
       <%= link_to "Back to event", :back, class:"nav-link-buy" %>
