--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,11 +30,9 @@
       <div class="ticket-card">
         <%= image_tag event.picture_url %>
         <div class="ticket-card-infos">
-          <p><small><%= event.date %></small></p>
+          <p><%= event.date.strftime("%b %-d") %> <%= event.time.to_i %>h</p>
           <h3><%= event.title %></h3>
-          <% if event.title != event.artist %>
-            <p><%= event.artist %></p>
-          <% end %>
+          <p><%= event.venue %></p>
         </div>
       </div>
       <% end %>
