styled tags like pills

--- a/app/assets/stylesheets/components/_update_form.scss
+++ b/app/assets/stylesheets/components/_update_form.scss
@@ -42,3 +42,32 @@
   width: 100%;
   flex-direction: column;
 }
+.tag-item {
+  display: inline-block;
+}
+.tag-selector {
+  position: absolute;
+  transform: scale(0);
+}
+.tag-selector + label {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.7rem;
+  border-radius: 50rem;
+  padding: 0.1rem 0.5rem;
+  background-color: #e3f5f2;
+  color: #84C4BB;
+  border: 1px solid #84C4BB;
+  margin-right: 0.6rem;
+  margin-bottom: 0.4rem;
+}
+.tag-selector:checked + label {
+  background-color: #84C4BB;
+  color: white;
+}
+fieldset {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
