--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,19 +14,20 @@
     <div class="home-btn-category">
 
       <div class="home-btn-category btn"
-          data-action="click->refresh-markers#update">
-        <a class="category-link" href="#">Music</a>
+          data-action="click->refresh-markers#test">
+        <a class="category-link" href="#" id="music">Music</a>
       </div>
 
       <div class="home-btn-category btn"
           data-action="click->refresh-markers#update">
-        <a class="category-link" href="#">Art & Theater</a>
+        <a class="category-link" href="#" id="art">Art & Theater</a>
       </div>
 
       <div class="home-btn-category btn"
           data-action="click->refresh-markers#update">
-        <a class="category-link" href="#">Sport</a>
+        <a class="category-link" href="#" id="sport">Sport</a>
       </div>
+
     </div>
 
     <%= render "shared/map" %>
