--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,5 +1,7 @@
 <div style="width: 100%; height: 600px;"
   data-controller="map"
+  data-action='updateMap->map#refresh'
+  data-refresh-markers-target="child"
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API'] %>">
 </div>
